dev/echo-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: ealen/echo-server
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: echo-server  
spec:
  ports:
    - port: 80
  selector:
    app: echo-server
