dev/testservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: ealen/echo-server
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: dev
spec:
  type: LoadBalancer
  loadBalancerIP: 212.132.68.11
  selector:
    app: echo-server
  ports:
    - protocol: TCP
      port: 90
      targetPort: 80
